--- a/visvajeet_portfolio/index.html
+++ b/visvajeet_portfolio/index.html
@@ -41,7 +41,7 @@
             opacity: 0.8;
         }
     </style>
-<script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fvisvajeet5112back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.5"></script>
+<script type="module" 
 </head>
 <body>
     <div class="loading-container">
